--- a/style.css
+++ b/style.css
@@ -45,3 +45,62 @@ body > .container {
 code {
   font-size: 80%;
 }
+
+/* Värit
+--------------------------------------------------------------*/
+
+.btn-primary {
+	background-color: #66CC33;
+	border-color: #6B9954;
+}
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+	background-color: #6B9954;
+	border-color: #6B9954;
+}
+a {
+	color: #666699;
+	text-decoration: none;
+}
+a:hover, a:focus {
+	color: #666699;
+	text-decoration: underline;
+}
+	
+/* Navigaatio
+----------------------------------------------------------------*/
+.navlogo{
+	position:absolute;
+	top:11px;
+	left:-10px
+	max-width:100%;
+	height:25px;
+}
+.navbar{
+	border-bottom:1px solid #ccc;
+}
+/* Kartta 
+---------------------------------------------------------*/
+.kartta{
+	color:#fff;
+	padding:20px 0;
+	margin-top:-20px;
+	width:100%;
+	max-height:449px;
+	background:url('../../../kuvat/worldpurple.jpg') center;
+}
+.kartta p{
+	margin-bottom: 15px;
+	font-size: 35px;
+	font-weight: 200;
+	margin-right:33%;
+}
+.karttalogo{
+
+	max-width:66.6%;
+}
+/* Fontit
+------------------------------------------------------------------*/
+h1{
+	font-size: 60px;
+	line-height: 1;
+}
