--- a/style.css
+++ b/style.css
@@ -34,6 +34,16 @@ body {
 	margin-top:40px;
 	margin-bottom:40px;
 }
+.logolista{
+	list-style:none;
+	text-align:center;
+	margin:20px 0;
+	padding-left:0;
+}
+.logolista li{
+	display:inline;
+	margin:0 20px;
+}
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -57,11 +67,6 @@ code {
 
 /* Värit
 --------------------------------------------------------------*/
-.navbar a{
-	background:#fff;
-}
-
-
 .btn-primary {
 	background-color: #66CC33;
 	border-color: #6B9954;
@@ -71,22 +76,26 @@ code {
 	border-color: #6B9954;
 }
 a {
-	color: #666699;
+	color: #66CC33;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: #666699;
+	color: #66CC33;
 	text-decoration: underline;
 }
 	
 /* Navigaatio
 ----------------------------------------------------------------*/
 .navlogo{
-	height:35px;
+
 }
 .navbar-nav>li>a{
 	padding-top: 25px;
 	padding-bottom: 25px;
+}
+.navbar-brand{
+	background-color:transparent!important;
+	height: 100%;
 }
 /* Kartta 
 ---------------------------------------------------------*/
@@ -105,10 +114,9 @@ a:hover, a:focus {
 .kartta p{
 	font-size: 35px;
 	font-weight: 200;
-	margin-right:33%;
 }
 .karttalogo{
-	max-width:66.6%;
+	max-width:100%;
 }
 /* Fontit
 ------------------------------------------------------------------*/
@@ -118,3 +126,19 @@ h1{
 }
 /* Responsive
 --------------------------------------------------------------------*/
+@media screen and (max-width: 764px){
+	.navbar-brand{
+		padding: 10px 0;
+	}
+	.navlogo{
+		height:30px;
+	}
+	.kartta *{
+		text-align:center;
+	}
+	.kartta p{
+		font-size:25px;
+	}
+}
+
+
