--- a/style.css
+++ b/style.css
@@ -140,13 +140,16 @@ a:hover, a:focus {
 	width:100%;
 	background-color:#666699;
 }
+.otsake small{
+	color:#eee;
+}
 .kartta{
 	background:url('../../../kuvat/worldpurple.jpg') top center repeat-x;
 	background-color:#6f6fa1;
 	padding:60px 0;
 }
 .pieniotsake{
-	padding:20px 0;
+	padding:40px 0 20px 0;
 }
 
 .pieniotsake h1{
@@ -252,7 +255,50 @@ h1{
 	float:left;
 	margin-right:10px;
 }
-
+.blog-post iframe{
+	padding:20px 0;
+}
+.blog-post{
+	padding:0 40px;
+	border-right:1px solid #eee; 
+}
+.blog-post img{
+	margin-top: 20px;
+	padding: 5px;
+	border: 1px solid #ccc;
+}
+.blog-post img.media-object{
+	margin-top:0;
+	padding: 0;
+	border: none;
+}
+.blogrow{
+	border-bottom:1px solid #eee;
+	border-right:1px solid #eee;
+}
+.blogrow .thumbnail{
+	margin-top:20px;
+}
+.blogwrap .blogrow:last-child{
+	border-bottom:none;
+}
+.blog-arkisto li{
+	list-style:none;
+	text-transform:capitalize;
+}
+.post-title{
+	padding-top:0!important;
+	margin-bottom:10px!important;
+}
+.blog-post .text-muted{
+	margin-top:0;
+}
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+z-index: 2;
+color: #fff;
+background-color: #66CC33;
+border-color: #66CC33;
+}
 /*----------------------------------------------------------------------*/
 
 .ilmo{
@@ -289,6 +335,9 @@ h1{
 	}
 	.infonav{
 		display:none;
+	}
+	.blogrow{
+		border-right:0;
 	}
 
 @media screen and (max-width: 764px){
